--- a/index.html
+++ b/index.html
@@ -1,17 +1,221 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> the Greatest show </title>
+    <title>The greatest show </title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/74b89f5811.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <section>
-        <div class="messi">
-            <h1>Greatest show on the earth</h1>
-            <p>allegations of bribery within the Senior FIFA officials questioned the legitimacy of Qatar hosting the World Cup in 2022.</p>
+
+    <!-- the start-->
+
+    <div class="first">
+        <section class="divition">
+            <div class="show">
+                <h1>The Greatest show on the earth</h1>
+                <p>Football is the game of people ,it have power to control whole world.Are  you ready to injoy qutar world cup 2022</p>
+                <buttonn class="live">
+                    Watch Live
+                    <i class="fa-solid fa-angle-right"></i>
+                    </button>
+            </div>
+            <div class="image-box">
+                <img src="images/Banner Image.png" alt="">
+            </div>
+        </section>
+
+        <!-- second section -->
+
+        <section class="main-contant">
+            <div class="match">
+                <button><a href="./index2.html" target="_blank"> Upcoming Match</a></button> <button>All Group</button>
+                <button>Blog</button>
+            </div>
+            <div class="transfer">
+                <div class="transfer-box">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="text-box">
+                        <button class="button-trensfer">Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over kimpenbe transfer</h3>
+                        <div class="icon-box">
+                            <span class="text-icon">
+                                <img src="images/Time Icon.png" alt=""><span>10 hr</span>
+                            </span>
+                            <span class="text-icon">
+                                <img src="images/Chat Icon.png" alt=""><span>23</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-box">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="text-box">
+                        <button class="button-trensfer">Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over kimpenbe transfer</h3>
+                        <div class="icon-box">
+                            <span class="text-icon">
+                                <img src="images/Time Icon.png" alt=""><span>10 hr</span>
+                            </span>
+                            <span class="text-icon">
+                                <img src="images/Chat Icon.png" alt=""><span>23</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-box">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="text-box">
+                        <button class="button-trensfer">Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over kimpenbe transfer</h3>
+                        <div class="icon-box">
+                            <span class="text-icon">
+                                <img src="images/Time Icon.png" alt=""><span>10 hr</span>
+                            </span>
+                            <span class="text-icon">
+                                <img src="images/Chat Icon.png" alt=""><span>23</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-box">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="text-box">
+                        <button class="button-trensfer">Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over kimpenbe transfer</h3>
+                        <div class="icon-box">
+                            <span class="text-icon">
+                                <img src="images/Time Icon.png" alt=""><span>10 hr</span>
+                            </span>
+                            <span class="text-icon">
+                                <img src="images/Chat Icon.png" alt=""><span>23</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-box">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="text-box">
+                        <button class="button-trensfer">Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over kimpenbe transfer</h3>
+                        <div class="icon-box">
+                            <span class="text-icon">
+                                <img src="images/Time Icon.png" alt=""><span>10 hr</span>
+                            </span>
+                            <span class="text-icon">
+                                <img src="images/Chat Icon.png" alt=""><span>23</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-box">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="text-box">
+                        <button class="button-trensfer">Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over kimpenbe transfer</h3>
+                        <div class="icon-box">
+                            <span class="text-icon">
+                                <img src="images/Time Icon.png" alt=""><span>10 hr</span>
+                            </span>
+                            <span class="text-icon">
+                                <img src="images/Chat Icon.png" alt=""><span>23</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-box">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="text-box">
+                        <button class="button-trensfer">Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over kimpenbe transfer</h3>
+                        <div class="icon-box">
+                            <span class="text-icon">
+                                <img src="images/Time Icon.png" alt=""><span>10 hr</span>
+                            </span>
+                            <span class="text-icon">
+                                <img src="images/Chat Icon.png" alt=""><span>23</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-box">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="text-box">
+                        <button class="button-trensfer">Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over kimpenbe transfer</h3>
+                        <div class="icon-box">
+                            <span class="text-icon">
+                                <img src="images/Time Icon.png" alt=""><span>10 hr</span>
+                            </span>
+                            <span class="text-icon">
+                                <img src="images/Chat Icon.png" alt=""><span>23</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-box">
+                    <img src="images/Blog Image.png" alt=""><br>
+                    <div class="text-box">
+                        <button class="button-trensfer">Transfer</button>
+                        <h3>Transfer Live: Chlesea in talks over kimpenbe transfer</h3>
+                        <div class="icon-box">
+                            <span class="text-icon">
+                                <img src="images/Time Icon.png" alt=""><span>10 hr</span>
+                            </span>
+                            <span class="text-icon">
+                                <img src="images/Chat Icon.png" alt=""><span>23</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+<!-- view all button -->
+        </section>
+        <div class="more-btn">
+            <button class="view-all">View All</button>
         </div>
-    </section>
+    </div>
+
+    <!--the tail part -->
+
+    <footer>
+        <h2>Goal</h2>
+        <hr>
+        <div class="footer-blog">
+            <p>Contact Us</p>
+            <p>Terms of Service</p>
+            <p>Privacy Policy</p>
+            <p>Privacy Setting</p>
+            <p>Goal App</p>
+            <p>Goal Live</p>
+        </div> <br>
+        <div class="icon-social">
+            <a href="https://www.facebook.com/login/">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/">
+                <i class="fa-brands fa-instagram-square"></i>
+            </a>
+            <a href="https://twitter.com/">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://www.linkedin.com/">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://www.youtube.com/">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </div>
+    </footer>
 </body>
+
 </html>
